maybe fixed overflow this time 2

--- a/Portfolio Files/Portfolio Website/styles/mainStyles.css
+++ b/Portfolio Files/Portfolio Website/styles/mainStyles.css
@@ -1,7 +1,12 @@
+body,html {
+    overflow-x: hidden;
+}
+
 body
 {
     margin: 0;
     padding: 0;
+    position: relative;
     overflow-x: hidden;
     width: 100vw;
 }
